--- a/Rewrite/cookie.conf
+++ b/Rewrite/cookie.conf
@@ -1,4 +1,8 @@
-hostname = manga.bilibili.com, m.ximalaya.com, nebula.kuaishou.com, api.m.jd.com, c.tieba.baidu.com, api.bilibili.com, *.bilibili.com, api.1sapp.com, music.163.com, *.acfun.cn, *.video.qq.com, xiaoshuo.qm989.com, *.youth.cn, ios.baertt.com, act.10010.com, m.client.10010.com, api.cashtoutiao.com, apapia-history.manmanbuy.com, glados.rocks, 
+hostname = manga.bilibili.com, m.ximalaya.com, nebula.kuaishou.com, api.m.jd.com, c.tieba.baidu.com, api.bilibili.com, *.bilibili.com, api.1sapp.com, music.163.com, *.acfun.cn, *.video.qq.com, xiaoshuo.qm989.com, *.youth.cn, ios.baertt.com, act.10010.com, m.client.10010.com, api.cashtoutiao.com, apapia-history.manmanbuy.com, glados.rocks, api.xiaoheihe.cn 
+
+# 小黑盒
+
+^https:\/\/api\.xiaoheihe\.cn\/account\/home_v\d\/\? url script-request-header https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js
 
 # GLaDOS签到
 https:\/\/glados\.rocks\/api\/user\/status url script-request-header https://github.com/evilbutcher/Quantumult_X/raw/master/check_in/glados/glados.js
