--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,8 +1,8 @@
-hostname = *.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, 
+hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, 
 
 
 ### bilibili ADs
-^https:\/\/.*\.hdslb\.com\/bfs\/sycp\/.* url reject
+^https:\/\/i0\.hdslb\.com\/bfs\/sycp\/.* url reject
 
 ### 微信 ADs
 ^https:\/\/mp\.weixin\.qq\.com\/mp\/ad.* url reject
