--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,5 +1,7 @@
-hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, 
+hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, 
 
+### cocomanhua ADs
+^https:\/\/.*\.fun\/rs.* url reject
 
 ### bilibili ADs
 ^https:\/\/i0\.hdslb\.com\/bfs\/sycp\/.* url reject
