--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,7 +1,8 @@
-hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, 
+hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, 
 
 ### cocomanhua ADs
 ^https:\/\/.*\.fun\/floater.* url reject
+^https:\/\/.*\.club\/floater.* url reject
 
 ### bilibili ADs
 ^https:\/\/i0\.hdslb\.com\/bfs\/sycp\/.* url reject
