--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -10,7 +10,7 @@ hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.
 # 微信 ADs
 ^https:\/\/mp\.weixin\.qq\.com\/mp\/ad.* url reject
 
-# 去微信公众号广告 (By Choler)
+# 去微信公众号广告 ADs (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 # 知乎 ADs
@@ -23,7 +23,7 @@ hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.
 # 微博国际版 ADs
 ^https:\/\/weibointl\.api\.weibo\.cn\/portal\.php.*ads&c=ad.* url reject
 
-# Pornhub
+# Pornhub ADs
 ^https:\/\/cn\.pornhub\.com\/.* url response-body (<div class="bottomNav clearfix">(\n.*){7}\n.*|<div class="adContainer clearfix">(\n.*){3}|<div class="adContainer clearfix ad-tabSplit">(\n.*){4}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){8}) response-body <meta name="author" content="ZYD">
 
 # Pianku ADs
@@ -32,7 +32,7 @@ hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.
 # 有道翻译 ADs
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
 
-# 哔哩哔哩动画去广告 (By onewayticket255)
+# 哔哩哔哩动画去广告 ADs (By onewayticket255)
 https://app.bilibili.com/x/v2/(splash|search/(defaultword|square)) url reject-200
 https://api.bilibili.com/x/v2/dm/ad url reject-200
 #https://app.bilibili.com/x/v2/space?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20space.js
@@ -43,5 +43,5 @@ https://app.bilibili.com/x/v2/view?access_key url script-response-body https://r
 https://api.bilibili.com/x/v2/reply/main?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20reply.js
 https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20live.js
 
-# 哔哩哔哩番剧开启1080P+
+# 哔哩哔哩番剧开启1080P+ JS
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilifj.js
