--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -28,7 +28,7 @@ hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.
 
 # Pianku ADs
 ^https:\/\/vip\.beiweigroup\.com\/.*.gif url reject
-^http:\/\/showvip\.bjaodidazhong\.com\/.* url reject
+^http:\/\/showvip\.nanerjia\.com\/.* url reject
 
 # 有道翻译 ADs
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
