--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,4 @@
-hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, vip.beiweigroup.com, m.youdao.com, app.bilibili.com, showvip.bjaodidazhong.com
+hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, vip.beiweigroup.com, m.youdao.com, app.bilibili.com, cbu01.alicdn.com, 
 
 # cocomanhua ADs
 ^https:\/\/.*\.fun\/floater.* url reject
@@ -28,7 +28,7 @@ hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.
 
 # Pianku ADs
 ^https:\/\/vip\.beiweigroup\.com\/.*.gif url reject
-^http:\/\/showvip\.nanerjia\.com\/.* url reject
+^https:\/\/cbu01\.alicdn\.com\/img\/ibank\/.*\.jpg url reject
 
 # 有道翻译 ADs
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
