--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,4 @@
-hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, vip.beiweigroup.com, m.youdao.com, app.bilibili.com, 
+hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, 
 
 # cocomanhua ADs
 ^https:\/\/.*\.fun\/floater.* url reject
@@ -25,9 +25,6 @@ hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.
 
 # Pornhub ADs
 ^https:\/\/cn\.pornhub\.com\/.* url response-body (<div class="bottomNav clearfix">(\n.*){7}\n.*|<div class="adContainer clearfix">(\n.*){3}|<div class="adContainer clearfix ad-tabSplit">(\n.*){4}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){8}) response-body <meta name="author" content="ZYD">
-
-# Pianku ADs
-^https:\/\/vip\.beiweigroup\.com\/.*.gif url reject
 
 # 有道翻译 ADs
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
