--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -24,7 +24,7 @@ hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.
 ^https:\/\/weibointl\.api\.weibo\.cn\/portal\.php.*ads&c=ad.* url reject
 
 # Pornhub ADs
-^https:\/\/cn\.pornhub\.com\/.* url response-body (<div class="bottomNav clearfix">(\n.*){7}\n.*|<div class="adContainer clearfix">(\n.*){3}|<div class="adContainer clearfix ad-tabSplit">(\n.*){4}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){8}) response-body <meta name="author" content="ZYD">
+^https:\/\/cn\.pornhub\.com\/.* url response-body (<div class="bottomNav clearfix">(\n.*){7}\n.*|<div class="adContainer clearfix">(\n.*){3}|<div class="adContainer clearfix ad-tabSplit">(\n.*){4}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){8}) response-body <none>
 
 # 有道翻译 ADs
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
