--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,8 @@
-hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, 
+hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, 
+
+# 嘀哩哩 ADs
+^https:\/\/www\.dililitv\.com\/wp-author\/tga\/.*ad=.* url reject
+^https:\/\/js\.dilidd\.com\/top\.php url reject
 
 # nfmovies ADs
 https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container container">(\n.*){11}|76px|60px|chanceAd = 1;|timerAdCountdownCount > 5 response-body 000px
