--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,8 @@
-hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, 
+hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, 
+
+# Jable.tv ADs
+^https:\/\/jable\.tv\/.* url response-body <section class="pb-3 pb-e-lg-40 text-center">.*</iframe>(</section>?)|<section class="pb-3 pb-e-lg-40 text-center">.*</a>(</section>?)|<div class="col-6 col-sm-4 col-lg-3">(\n.*){2}\n<a target="_blank".*(\n.*){11}|<div class="text-center mb-e-30">.*target='_blank'.*</a></iframe>(</div>?)|<div class="col-6 col-sm-4 col-lg-12">(\n.*){2}\n<a target="_blank".*(\n.*){11} response-body <meta name="author" content="zyd">
+^https:\/\/asewlfjqwlflkew\.com\/gtm\.js.* url 302 $1$3
 
 # 嘀哩哩 ADs
 ^https:\/\/www\.dililitv\.com\/wp-author\/tga\/.*ad=.* url reject
