--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,6 +1,6 @@
 hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, 
 
-# 樱花动漫 ADs
+# 樱花动漫 m.yhdm.io ADs
 http://m.yhdm.io/bar/yfgg.js url reject
 http://m.yhdm.io/bar/yfyh.js url reject
 
@@ -8,14 +8,14 @@ http://m.yhdm.io/bar/yfyh.js url reject
 ^https:\/\/jable\.tv\/.* url response-body <section class="pb-3 pb-e-lg-40 text-center">.*</iframe>(</section>?)|<section class="pb-3 pb-e-lg-40 text-center">.*</a>(</section>?)|<div class="col-6 col-sm-4 col-lg-3">(\n.*){2}\n<a target="_blank".*(\n.*){11}|<div class="text-center mb-e-30">.*target='_blank'.*</a></iframe>(</div>?)|<div class="col-6 col-sm-4 col-lg-12">(\n.*){2}\n<a target="_blank".*(\n.*){11} response-body <meta name="author" content="zyd">
 ^https:\/\/asewlfjqwlflkew\.com\/gtm\.js.* url 302 $1$3
 
-# 嘀哩哩 ADs
+# 嘀哩哩 www.dililitv.com ADs
 ^https:\/\/www\.dililitv\.com\/wp-author\/tga\/.*ad=.* url reject
 ^https:\/\/js\.dilidd\.com\/top\.php url reject
 
-# nfmovies ADs
+# nfmovies www.nfmovies.com ADs
 https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container container">(\n.*){11}|76px|60px|chanceAd = 1;|timerAdCountdownCount > 5 response-body 000px
 
-# cocomanhua ADs
+# cocomanhua www.cocomanhua.com ADs
 ^https:\/\/.*\.fun\/floater.* url reject
 ^https:\/\/.*\.club\/floater.* url reject
 
