--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,4 @@
-hostname = i0.hdslb.com, mp.weixin.qq.com, www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,zhuanlan.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, 
+hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, api.zhihu.com, appcloud2.zhihu.com, zhuanlan.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, 
 
 # 樱花动漫 m.yhdm.io ADs
 http://m.yhdm.io/bar/yfgg.js url reject
