--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,4 @@
-hostname = i0.hdslb.com, mp.weixin.qq.com, *.zhihu.com, api.zhihu.com, appcloud2.zhihu.com, zhuanlan.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, 
+hostname = app.bilibili.com, api.bilibili.com, api.live.bilibili.com, api.vc.bilibili.com, mp.weixin.qq.com, *.zhihu.com, api.zhihu.com, appcloud2.zhihu.com, zhuanlan.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, 
 
 # 樱花动漫 m.yhdm.io ADs
 http://m.yhdm.io/bar/yfgg.js url reject
@@ -71,3 +71,25 @@ https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container c
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
 
 # bilibili ADs
+## blackmatrix7
+# 去除动态中的话题
+^https?:\/\/api\.vc\.bilibili\.com\/topic_svr\/v1\/topic_svr url reject-dict
+# 去除动态中的最常访问
+^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/mix_uplist url reject-dict
+# 推荐去广告
+^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 追番去广告
+^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 直播去广告
+^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 开屏去广告
+^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 标签页处理
+^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 我的页面处理
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 其他去广告
+^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/Flash url reject-dict
+^https?:\/\/ap(i|p)\.bilibili\.com\/((x\/v2|pgc)\/(search\/defaultword|season\/rank\/cn)|(pgc/season/rank/cn|x/v2/(search/(defaultword|hot|recommend|resource)))) url reject-dict
+^https?:\/\/api\.bilibili\.com\/x\/v2\/dm\/ad url reject-dict
+^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.comic\/flash url reject-dict
