--- a/Rewrite/cookie.conf
+++ b/Rewrite/cookie.conf
@@ -1,4 +1,7 @@
-hostname = api.m.jd.com
+hostname = api.m.jd.com, www.52pojie.cn
 
 # 京东获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+
+# 52pojie
+https:\/\/www\.52pojie\.cn\/home\.php\? url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
