--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,7 @@
-hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, 
+hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com
+
+# SmallSEOTools smallseotools.com
+^https:\/\/smallseotools\.com\/.* url response-body <div class="col-md-12 mob_pading">(\n.*){3}|<div class="col-md-12 mob_pading row">(\n.*){3} response-body <meta name="author" content="zyd">
 
 # 樱花动漫 m.yhdm.io ADs
 http://m.yhdm.io/bar/yfgg.js url reject
