--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,47 +1,50 @@
-hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com
+hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, 
+
+# bilibili视频下载解析 bilibili.iiiab.com
+^https:\/\/.*.iiilab.com\/.* url response-body 50px response-body 0px
 
 # SmallSEOTools smallseotools.com
 ^https:\/\/smallseotools\.com\/.* url response-body <div class="col-md-12 mob_pading">(\n.*){3}|<div class="col-md-12 mob_pading row">(\n.*){3} response-body <meta name="author" content="zyd">
 
-# 樱花动漫 m.yhdm.io ADs
+# 樱花动漫 m.yhdm.io
 http://m.yhdm.io/bar/yfgg.js url reject
 http://m.yhdm.io/bar/yfyh.js url reject
 
-# Jable.tv ADs
+# Jable.tv
 ^https:\/\/jable\.tv\/.* url response-body <section class="pb-3 pb-e-lg-40 text-center">.*</iframe>(</section>?)|<section class="pb-3 pb-e-lg-40 text-center">.*</a>(</section>?)|<div class="col-6 col-sm-4 col-lg-3">(\n.*){2}\n<a target="_blank".*(\n.*){11}|<div class="text-center mb-e-30">.*target='_blank'.*</a></iframe>(</div>?)|<div class="col-6 col-sm-4 col-lg-12">(\n.*){2}\n<a target="_blank".*(\n.*){11} response-body <meta name="author" content="zyd">
 ^https:\/\/asewlfjqwlflkew\.com\/gtm\.js.* url 302 $1$3
 
-# 嘀哩哩 www.dililitv.com ADs
+# 嘀哩哩 www.dililitv.com
 ^https:\/\/www\.dililitv\.com\/wp-author\/tga\/.*ad=.* url reject
 ^https:\/\/js\.dilidd\.com\/top\.php url reject
 
-# nfmovies www.nfmovies.com ADs
+# nfmovies www.nfmovies.com
 https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container container">(\n.*){11}|76px|60px|chanceAd = 1;|timerAdCountdownCount > 5 response-body 000px
 
-# cocomanhua www.cocomanhua.com ADs
+# cocomanhua www.cocomanhua.com
 ^https:\/\/.*\.fun\/floater.* url reject
 ^https:\/\/.*\.club\/floater.* url reject
 
-# 微信 ADs
+# 微信
 ^https:\/\/mp\.weixin\.qq\.com\/mp\/ad.* url reject
 
-# 去微信公众号广告 ADs (By Choler)
+# 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
-# 知乎 ADs
+# 知乎
 ^https?:\/\/(api|www)\.zhihu\.com\/.*?(featured-comment-ad|recommendations|community-ad) url reject-img
 ^https:\/\/oia\.zhihu\.com\/.* url 302 $1$3
 
-# 粉笔 ADs
+# 粉笔
 ^https:\/\/fb\.fbstatic\.cn\/api\/ape-images\/.*.jpg? url reject
 
-# 微博国际版 ADs
+# 微博国际版
 ^https:\/\/weibointl\.api\.weibo\.cn\/portal\.php.*ads&c=ad.* url reject
 
-# Pornhub ADs
+# Pornhub
 ^https:\/\/cn\.pornhub\.com\/.* url response-body (<div class="bottomNav clearfix">(\n.*){7}\n.*|<div class="adContainer clearfix">(\n.*){3}|<div class="adContainer clearfix ad-tabSplit">(\n.*){4}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){8}) response-body <meta name="author" content="ZYD">
 
-# 有道翻译 ADs
+# 有道翻译
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
 
 # bilibili ADs
