--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,9 @@
-hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, 
+hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, 
+
+# weibo
+
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
+^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
 # bilibili视频下载解析 bilibili.iiiab.com
 ^https:\/\/.*.iiilab.com\/.* url response-body 50px response-body 0px
