--- a/Rewrite/cookie.conf
+++ b/Rewrite/cookie.conf
@@ -1,4 +1,7 @@
-hostname = api.m.jd.com, www.52pojie.cn
+hostname = api.m.jd.com, www.52pojie.cn, *.bilibili.com
+
+# Bilibili
+^https:\/\/(www|live)\.bilibili\.com\/?.? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
 
 # 京东获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
