--- a/Rewrite/cookie.conf
+++ b/Rewrite/cookie.conf
@@ -1,4 +1,7 @@
-hostname = api.m.jd.com, www.52pojie.cn, *.bilibili.com, m.client.10010.com
+hostname = api.m.jd.com, www.52pojie.cn, *.bilibili.com, m.client.10010.com, www.rerere.xyz
+
+# RE机场
+https:\/\/www\.rerere\.xyz url script-request-header https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkincookie_env.js
 
 # 联通签到抽奖
 ^https?:\/\/m\.client\.10010\.com\/dailylottery\/static\/(integral|doubleball)\/firstpage url script-request-header https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/10010/unicom_checkin.js
