--- a/Rewrite/cookie.conf
+++ b/Rewrite/cookie.conf
@@ -1,4 +1,7 @@
-hostname = api.m.jd.com, www.52pojie.cn, *.bilibili.com, m.client.10010.com, www.rerere.xyz
+hostname = api.m.jd.com, www.52pojie.cn, *.bilibili.com, m.client.10010.com, www.rerere.xyz, commontgw6.reader.qq.com, eventv3.reader.qq.com
+
+# QQ阅读
+^https:\/\/(commontgw6|eventv3)\.reader\.qq\.com\/* url script-request-header https://raw.githubusercontent.com/XidNDD/2020scripts/master/QQReadSign.js 
 
 # RE机场
 https:\/\/www\.rerere\.xyz url script-request-header https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkincookie_env.js
