--- a/Rewrite/cookie.conf
+++ b/Rewrite/cookie.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, www.52pojie.cn, *.bilibili.com, m.client.10010.com, www.rerere.xyz, commontgw6.reader.qq.com, eventv3.reader.qq.com
+hostname = api.m.jd.com, www.52pojie.cn, *.bilibili.com, m.client.10010.com, www.rerere.xyz, commontgw6.reader.qq.com, eventv3.reader.qq.com, act.10010.com, m.client.10010.com
 
 # QQ阅读
 ^https:\/\/(commontgw6|eventv3)\.reader\.qq\.com\/* url script-request-header https://raw.githubusercontent.com/XidNDD/2020scripts/master/QQReadSign.js 
@@ -7,7 +7,10 @@ hostname = api.m.jd.com, www.52pojie.cn, *.bilibili.com, m.client.10010.com, www
 https:\/\/www\.rerere\.xyz url script-request-header https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkincookie_env.js
 
 # 联通签到抽奖
-^https?:\/\/m\.client\.10010\.com\/dailylottery\/static\/(integral|doubleball)\/firstpage url script-request-header https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/10010/unicom_checkin.js
+
+^https?:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
+^https?:\/\/act.10010.com\/SigninApp(.*?)\/signin\/daySign url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
+^https?:\/\/m.client.10010.com\/dailylottery\/static\/(textdl\/userLogin|active\/findActivityInfo) url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
 
 # Bilibili
 ^https:\/\/(www|live)\.bilibili\.com\/?.? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
