--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,4 +1,4 @@
-hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, cn.pornhub.com, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, xiaoshuo.wtzw.com, 
+hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, xiaoshuo.wtzw.com, 
 
 # 七猫小说
 ^https:\/\/xiaoshuo\.wtzw\.com\/api\/v2\/user\/my-center url response-body "is_vip":"0" response-body "is_vip":"1"
@@ -47,9 +47,6 @@ https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container c
 
 # 微博国际版
 ^https:\/\/weibointl\.api\.weibo\.cn\/portal\.php.*ads&c=ad.* url reject
-
-# Pornhub
-^https:\/\/cn\.pornhub\.com\/.* url response-body (<div class="bottomNav clearfix">(\n.*){7}\n.*|<div class="adContainer clearfix">(\n.*){3}|<div class="adContainer clearfix ad-tabSplit">(\n.*){4}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){8}) response-body <meta name="author" content="ZYD">
 
 # 有道翻译
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
