--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,7 +1,7 @@
 hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.club, m.youdao.com, app.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, xiaoshuo.wtzw.com, *.pornhub.com
 
 # Pornhub
-^https:\/\/(www|cn)\.pornhub.com url response-body <div class="topAdContainter">(\n.*){9}|<div class="premiumAdvertWrapper">(\n.*){5}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){7}|<div class="adContainer clearfix ad-tabSplit">(\n.*){7}|<div class="adContainer clearfix">(\n.*){7} response-body <meta name="author" content="zyd">
+^https:\/\/(www|cn)\.pornhub.com url response-body <div class="topAdContainter">(\n.*){9}|<div class="premiumAdvertWrapper">(\n.*){5}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){7}|<div class="adContainer clearfix ad-tabSplit">(\n.*){7}|<div class="adContainer clearfix">(\n.*){7}|<ins.*?adsbytrafficjunky.*?</ins>|<div.*ad-link.*?</div> response-body <meta name="author" content="zyd">
 
 # 七猫小说
 ^https:\/\/xiaoshuo\.wtzw\.com\/api\/v2\/user\/my-center url response-body "is_vip":"0" response-body "is_vip":"1"
