--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -2,6 +2,8 @@ hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.c
 
 # Pornhub
 ^https:\/\/(www|cn)\.pornhub.com url response-body <div class="topAdContainter">(\n.*){9}|<div class="premiumAdvertWrapper">(\n.*){5}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){7}|<div class="adContainer clearfix ad-tabSplit">(\n.*){7}|<div class="adContainer clearfix">(\n.*){7} response-body <meta name="author" content="zyd">
+## 视频开头广告
+^https:\/\/(www|cn)\.pornhub\.com\/_xa\/ads.* url reject
 
 # 七猫小说
 ^https:\/\/xiaoshuo\.wtzw\.com\/api\/v2\/user\/my-center url response-body "is_vip":"0" response-body "is_vip":"1"
