--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -6,7 +6,7 @@ hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.c
 ^https:\/\/(www|cn)\.pornhub\.com\/_xa\/ads.* url reject
 
 # 七猫小说
-^https:\/\/xiaoshuo\.wtzw\.com\/api\/v1\/user\/get-user-info url response-body "is_vip":"\d" response-body "is_vip":"1"
+^https:\/\/xiaoshuo\.wtzw\.com\/api\/v1\/user\/get-user-info url response-body "is_vip":"0" response-body "is_vip":"1"
 
 # weibo
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
