--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -61,4 +61,4 @@ https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container c
 
 # bilibili
 ## 开启视频高分辨率
-^https:\/\/api\.bilibili\.com\/x\/vip\/web\/user url script-response-body bili.js
+^https:\/\/api\.bilibili\.com\/x\/vip\/web\/user url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/bili.js
