--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,7 +1,4 @@
-hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, mangaapi.manhuaren.com
-
-#漫画人
-^http:\/\/mangaapi\.manhuaren\.com\/v1\/user\/getUserInfo.* url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/manhuaren.js
+hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, 
 
 # 动漫花园
 ^https:\/\/dmhy\.anoneko\.com\/.* url response-body <div id="1280_adv" align="center">|<a href="https://7segu.taobao.com.* response-body <none>
