--- a/Rewrite/githubacct001.conf
+++ b/Rewrite/githubacct001.conf
@@ -1,6 +1,11 @@
-hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, tiku.fenbi.com, heic.alicdn.com
+hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, tiku.fenbi.com, heic.alicdn.com, god.gameyw.netease.com
 
-# 淘宝开屏广告
+# 网易大神
+//开屏广告
+^https:\/\/god\.gameyw\.netease\.com\/v1\/ad\/.* url reject
+
+# 淘宝
+//开屏广告
 ^https:\/\/heic\.alicdn\.com\/imgextra.*\.heic url reject
 
 # 粉笔公考
