--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -2,7 +2,7 @@ hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.c
 
 # > Google Search
 //---顶部广告
-^https:\/\/www\.google\.com\/search.* url response-body (<div id="tvcap">|<div id="taw">)(.*\n){5}.*(</div>){10} response-body <none>
+#^https:\/\/www\.google\.com\/search.* url response-body <div id="tvcap">(.*\n){5}.*(</div>){10} response-body <none>
 
 # > 小米商城
 //---开屏广告
