--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -1,4 +1,4 @@
-hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, tiku.fenbi.com, heic.alicdn.com, god.gameyw.netease.com, api.m.mi.com, www.google.com
+hostname = mp.weixin.qq.com, *.zhihu.com, fb.fbstatic.cn, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, tiku.fenbi.com, heic.alicdn.com, god.gameyw.netease.com, api.m.mi.com, 
 
 # > Google Search
 //---顶部广告
