--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -5,7 +5,7 @@ http://image.pushplus.plus/.*.jpg url 302 https://raw.githubusercontent.com/gith
 
 # > Google Search
 //---顶部广告
-^https:\/\/www\.google\.com\/(complete\/)?search.* url response-body (<div class="uEierd">.*(</div>){7}){1,4} response-body <none>
+#^https:\/\/www\.google\.com\/(complete\/)?search.* url response-body (<div class="uEierd">.*(</div>){7}){1,4} response-body <none>
 
 # > 小米商城
 //---开屏广告
