--- a/Rewrite/ylgy_easymode.conf
+++ b/Rewrite/ylgy_easymode.conf
@@ -1,7 +1,7 @@
-/*
-# Powerd By Dongz.
-# 修改《羊了个羊》第二关为第一关的简单模式
-*/
+// 修改《羊了个羊》第二关为第一关的简单模式
+// 感谢吾爱破解@cn_jiajia的解析思路
+// Powerd By Dongz.
+// Updated: 2022-09-15
 
 # > hostname
 hostname = cat-match.easygame2021.com
