--- a/Rewrite/ylgy_easymode.conf
+++ b/Rewrite/ylgy_easymode.conf
@@ -1,9 +1,10 @@
+// v0.2 修改第二关id90016为第一关id80001 // updated: 2022-09-16
+// v0.1 修改第二关id90015为第一关id80001 // updated: 2022-09-15
 // 修改《羊了个羊》第二关为第一关的简单模式
 // 感谢吾爱破解@cn_jiajia的解析思路
 // Powerd By Dongz.
-// Updated: 2022-09-15
 
 # > hostname
 hostname = cat-match.easygame2021.com
 # > rewrite
-^https?:\/\/cat-match\.easygame2021\.com\/sheep\/v1\/game\/map_info\?map_id=90015 url 302 https://cat-match.easygame2021.com/sheep/v1/game/map_info?map_id=80001
+^https?:\/\/cat-match\.easygame2021\.com\/sheep\/v1\/game\/map_info\?map_id=90016 url 302 https://cat-match.easygame2021.com/sheep/v1/game/map_info?map_id=80001
