--- a/Rewrite/ylgy_easymode.conf
+++ b/Rewrite/ylgy_easymode.conf
@@ -1,3 +1,4 @@
+// v0.3 修改第二关id90017为第一关id80001；修改map_info为map_info_new // updated: 2022-09-17
 // v0.2 修改第二关id90016为第一关id80001 // updated: 2022-09-16
 // v0.1 修改第二关id90015为第一关id80001 // updated: 2022-09-15
 // 修改《羊了个羊》第二关为第一关的简单模式
@@ -7,4 +8,4 @@
 # > hostname
 hostname = cat-match.easygame2021.com
 # > rewrite
-^https?:\/\/cat-match\.easygame2021\.com\/sheep\/v1\/game\/map_info\?map_id=90017 url 302 https://cat-match.easygame2021.com/sheep/v1/game/map_info?map_id=80001
+^https?:\/\/cat-match\.easygame2021\.com\/sheep\/v1\/game\/map_info_new\?map_id=90017 url 302 https://cat-match.easygame2021.com/sheep/v1/game/map_info_new?map_id=80001
