--- a/Rewrite/ylgy_easymode.conf
+++ b/Rewrite/ylgy_easymode.conf
@@ -8,4 +8,4 @@
 # > hostname
 hostname = cat-match.easygame2021.com
 # > rewrite
-^https?:\/\/cat-match\.easygame2021\.com\/sheep\/v1\/game\/map_info_new\?map_id=90017 url 302 https://cat-match.easygame2021.com/sheep/v1/game/map_info_new?map_id=80001
+^https?:\/\/cat-match\.easygame2021\.com\/sheep\/v1\/game\/map_info_new\?map_id=\d{5} url 302 https://cat-match.easygame2021.com/sheep/v1/game/map_info_new?map_id=80001
