--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -23,6 +23,10 @@ http://image.pushplus.plus/.*.jpg url 302 https://raw.githubusercontent.com/gith
 ^https:\/\/tiku\.fenbi\.com\/iphone\/(shenlun|xingce|sqgj)\/banners\/v2?.* url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/Rewrite/Fenbi/fbgk.js
 ^https:\/\/fb\.fbstatic\.cn\/api\/ape-images\/.*.jpg? url reject
 
+# > 百度网盘
+//---个人页面去广告
+^https:\/\/pan\.baidu\.com\/act\/v2\/welfare\/list.* url reject
+
 # > 动漫花园
 ^https:\/\/dmhy\.anoneko\.com\/.* url response-body <div id="1280_adv" align="center">|<a href="https://7segu.taobao.com.* response-body <none>
 ^https:\/\/.*\.bebi\.com\/.* url reject
