--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -1,4 +1,7 @@
-hostname = mp.weixin.qq.com, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, www.google.com, image.pushplus.plus
+hostname = mp.weixin.qq.com, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, www.google.com, image.pushplus.plus, slb.orderorigin.com
+
+# > 小星空解锁热门对象回复
+^https://slb\.orderorigin\.com\/stars-p\/v2\/explore\/msg\/msg-busy\?sender=.* url reject
 
 # > pushplus通知详情页去广告
 http://image.pushplus.plus/.*.jpg url 302 https://raw.githubusercontent.com/githubacct001/QuantumultX/master/Rewrite/Adfuckoff.png
