--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -1,4 +1,10 @@
-hostname = mp.weixin.qq.com, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, www.google.com, image.pushplus.plus, slb.orderorigin.com
+hostname = mp.weixin.qq.com, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, www.google.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com
+
+# > 得物
+//---去除得物app用户信息页广告
+^https://app\.dewu\.com/api/v1/app/index/ice/user-info url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/Rewrite/dewu/dw_user.js
+//---去除得物app探索页面广告
+^https://app\.dewu\.com/identify-discovery/v1/discovery/index url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/Rewrite/dewu/dw_discovery.js
 
 # > 小星空解锁热门对象回复
 ^https://slb\.orderorigin\.com\/stars-p\/v2\/explore\/msg\/msg-busy\?sender=.* url reject
